# LabPtPTm1

./: README.md  pyproject.toml  setup.py
.dvc/: config
data/815km_SSMF/DP16QAM_RRC0.2_28GBd_1ch/: .gitignore  LP-20_1.h5.dvc  LP-20_2.h5.dvc  LP-20_3.h5.dvc  LP-20_4.h5.dvc  LP-20_5.h5.dvc  LP-35_1.h5.dvc  LP-35_2.h5.dvc  LP-35_3.h5.dvc  LP-35_4.h5.dvc  LP-35_5.h5.dvc  LP-47_1.h5.dvc  LP-47_2.h5.dvc  LP-47_3.h5.dvc  LP-47_4.h5.dvc  LP-47_5.h5.dvc  LP-60_1.h5.dvc  LP-60_2.h5.dvc  LP-60_3.h5.dvc  LP-60_4.h5.dvc  LP-6_1.h5.dvc  LP-6_2.h5.dvc  LP-6_3.h5.dvc  LP-6_4.h5.dvc  LP-6_5.h5.dvc  LP-70_5.h5.dvc  LP26_1.h5.dvc  LP26_2.h5.dvc  LP26_3.h5.dvc  LP26_4.h5.dvc  LP26_5.h5.dvc  LP41_1.h5.dvc  LP41_2.h5.dvc  LP41_3.h5.dvc  LP41_4.h5.dvc  LP41_5.h5.dvc  LP9_1.h5.dvc  LP9_2.h5.dvc  LP9_3.h5.dvc  LP9_4.h5.dvc  (+1 more)
data/815km_SSMF/DP16QAM_RRC0.2_28GBd_1ch_SSNLW/: .gitignore  LP-20_1.h5.dvc  LP-35_1.h5.dvc  LP-48_1.h5.dvc  LP-58_1.h5.dvc  LP-5_1.h5.dvc  LP27_1.h5.dvc  LP34_1.h5.dvc  LP9_1.h5.dvc
data/815km_SSMF/DP16QAM_RRC0.2_28GBd_5ch_SSNLW/: .gitignore  LP-18_1.h5.dvc  LP-35_1.h5.dvc  LP-50_1.h5.dvc  LP-5_1.h5.dvc  LP-63_1.h5.dvc  LP24_1.h5.dvc  LP37_1.h5.dvc  LP9_1.h5.dvc
data/815km_SSMF/DP16QAM_RRC0.2_34GBd_5ch_SSNLW/: .gitignore  LP-20_1.h5.dvc  LP-35_1.h5.dvc  LP-51_1.h5.dvc  LP-64_1.h5.dvc  LP-6_1.h5.dvc  LP24_1.h5.dvc  LP36_1.h5.dvc  LP8_1.h5.dvc
data/sent/: QPSK65536_mt19937ar.h5.dvc
data/source/: .gitignore  16QAM65536_mt19937ar.h5.dvc  16QAM65536_mt19937ar_src1.h5.dvc  QPSK65536_mt19937ar_src2.h5.dvc
labptptm1/: __init__.py
(+157 files in other folders)
